point commit working v1.1